Enhance index.html with improved title, meta tags for SEO, and structured data for better visibility. Add footer attribution styles in styles.css for consistent branding.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Covey Matrix Todo App</title>
+    <title>Covey Matrix Todo App - Prioritize Tasks with Urgent/Important Matrix</title>
+    <meta name="description" content="Organize and prioritize your tasks using the Stephen Covey Time Management Matrix. Focus on Important tasks, manage Urgent ones, and improve your productivity.">
+    <meta name="keywords" content="Covey Matrix, Time Management, Task Prioritization, Urgent Important Matrix, Productivity App, Todo List, Task Management, Eisenhower Matrix, Organize Tasks, Focus, Schedule, Delegate, Eliminate">
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebApplication",
+      "name": "Covey Matrix Todo App",
+      "description": "Organize and prioritize your tasks using the Stephen Covey Time Management Matrix.",
+      "url": "https://himanshuraikwar.com/covey-matrix-todo",
+      "operatingSystem": "Any",
+      "applicationCategory": "ProductivityApplication"
+    }
+    </script>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
