Add favicon link to index.html for improved branding and user experience.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Covey Matrix Todo App - Prioritize Tasks with Urgent/Important Matrix</title>
     <meta name="description" content="Organize and prioritize your tasks using the Stephen Covey Time Management Matrix. Focus on Important tasks, manage Urgent ones, and improve your productivity.">
     <meta name="keywords" content="Covey Matrix, Time Management, Task Prioritization, Urgent Important Matrix, Productivity App, Todo List, Task Management, Eisenhower Matrix, Organize Tasks, Focus, Schedule, Delegate, Eliminate">
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
