Revamp task management interface by adding category selection in index.html, updating task rendering in script.js to include category badges, and enhancing styles.css for improved layout and visual consistency.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
                     <option value="3">Quadrant 3: Urgent, Not Important</option>
                     <option value="4">Quadrant 4: Not Urgent, Not Important</option>
                 </select>
+                <select id="categorySelect">
+                    <option value="office">Office</option>
+                    <option value="freelance">Freelance</option>
+                    <option value="side-projects">Side Projects</option>
+                    <option value="other">Other</option>
+                </select>
                 <button onclick="addTask()" class="add-btn">
                     <i class="fas fa-plus"></i> Add Task
                 </button>
